feat(event): update start functions
- make starting class
- hide all contents when program starts
- add click events on 4 buttons at initial screen
- update function that whenever user click one of the 4 buttons, it shows corresponding contents only.
- make a css class show, hidden.

--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@ button {
   font-weight: 600;
 }
 
+table {
+  text-align: center;
+}
+
 .hidden {
   display: none;
 }
 
 .show {
   display: block;
+}
+
+#line-name-input {
+  margin-bottom: 20px;
 }
