feat(mapPrint): update map print func
- show all lines and stations that is included in each line
- can print duration and distance between the stations.
- added css layouts to show prettier by list.

--- a/style.css
+++ b/style.css
@@ -17,3 +17,22 @@ table {
 #line-name-input {
   margin-bottom: 20px;
 }
+
+.map h3 {
+  margin: 15px;
+  color: blue;
+}
+
+.map > ul {
+  margin: 5px;
+}
+
+.map > li {
+  margin-left: 10px;
+}
+
+.list-hollow-circle {
+  list-style-type: circle;
+  color: brown;
+  margin: 0px;
+}
