feat(section): update table, option tags
- update line table in section tab whenever there is some change.
- update options in section tab.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ table {
   margin-bottom: 20px;
 }
 
+#section-status-table {
+  margin-top: 30px;
+}
+
 .map h3 {
   margin: 15px;
   color: blue;
