feat(path): Start making find-path func.
- Make structure of HTML.
- Make id that manages find-path HTML properties.
- Make new class that handles all the event that happening in find-path tab.
- Like the other tabs, [find-path] tab can be shown or hidden according to what user press the Manager Button.
- Add some CSS properties to visualize prettier.
- Update validation function of input departure station and arrival station.

--- a/style.css
+++ b/style.css
@@ -41,3 +41,20 @@ table {
   color: brown;
   margin: 0px;
 }
+
+#departure-station-name-input {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#arrival-station-name-input {
+  margin-bottom: 30px;
+}
+
+#search-button {
+  margin-top: 30px;
+}
+
+#search-button {
+  margin-left: 10px;
+}
