--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  margin-left: 20px;
+}
+
 button {
   font-weight: 600;
 }
@@ -6,12 +10,26 @@ table {
   text-align: center;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .hidden {
   display: none;
 }
 
 .show {
   display: block;
+  animation: fadeIn 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+.chosen {
+  background-color: slategray;
 }
 
 #line-name-input {
@@ -57,4 +75,12 @@ table {
 
 #search-button {
   margin-left: 10px;
+}
+
+#find-path-manager {
+  margin-top: 25px;
+}
+
+.map {
+  margin-top: 25px;
 }
